--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,53 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('http://fonts.googleapis.com/css?family=Raleway:400,700');
+
+$bg: #2A3136;
+$text-color: #88949D;
+$accent-color: #00E4AC;
+
+body, html {
+  height: 100%;
+}
+
+body {
+  background: $bg;
+  color: $text-color;
+  font-family: 'Raleway';
+}
+
+a {
+  color: #fff;
+}
+
+a:hover {
+  color: $accent-color;
+}
+
+.cta-btn, .cta-btn:visited {
+  color: $accent-color;
+  border: 1px solid $accent-color;
+  padding: 5px 12px;
+  float: right;
+  border-radius: 5px;
+}
+
+.cta-btn:hover {
+  background: $accent-color;
+  color: $bg;
+}
+
+h1 {
+  font-family: 'Raleway';
+  color: #fff;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 4.2em;
+  line-height: 1.2em;
+}
+
+.body-blur {
+  background: $bg url("/assets/images/blurbg.jpg") no-repeat top center !important;
+  background-size: 90% !important;
+  height: 100%;
+
+}
